--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,10 @@ on:
 env:
   
   # alphanumeric string under 14 characters
-  RESOURCE_GROUP_NAME: store
+  RESOURCE_GROUP_NAME: aca-dapr-rg
 
   # specify your preferred region
-  REGION: eastus
+  REGION: westus2
 
   STORE_DOCKER: Store/Dockerfile
   STORE_IMAGE: store
